tests/data/config-rollback/ingress/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-rollback-ingress2
spec:
  ingressClassName: nginx
  rules:
  - host: config-rollback-ingress2.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
