tests/data/config-rollback/ingress/mergeable-ingress.yaml
napiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-rollback-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  rules:
  - host: config-rollback-mergeable.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-rollback-minion1
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: config-rollback-mergeable.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-rollback-minion2
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: config-rollback-mergeable.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
